--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,7 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'com.google.firebase:firebase-appindexing:19.1.0'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    //implementation 'org.json:json:20160212'
-    compileOnly 'org.projectlombok:lombok:1.16.22'
-    annotationProcessor 'org.projectlombok:lombok:1.16.22'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
