--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.work:work-runtime:2.3.4'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
 }
